# nail

./: .gitignore  AGENTS.md  CHANGELOG.md  CLI.md  CONTRIBUTING.md  HISTORY.md  IDEAS.md  LICENSE  PHILOSOPHY.md  README.md  ROADMAP.md  SPEC.md  nail  nail_cli.py  pyproject.toml
benchmarks/: README.md  summarize_results.py  token_efficiency.py  verify_fix_loop.py
conformance/: README.md  index.json
demos/: ai_review_demo.py  e2e_agent_demo.py  e2e_demo_visual.py  mcp_firewall_demo.py  nail_killer_demo.py  rogue_agent_demo.py  termination_demo.py  trust_boundary_demo.py  verifiability_demo.py
docs/: CNAME  fc-ir-v1.md  fc-standard-proposal.md  index.html  integrations.md  playground.html  strategy-v1.0.md
examples/: add.nail  bad_effect.nail  bad_effect_call.nail  bad_missing_return.nail  bad_recursive.nail  bad_type_mismatch.nail  bad_unknown_op.nail  call_demo.nail  clamp.nail  countdown.nail  effect_propagation.nail  enum_example.nail  factorial.nail  fibonacci.nail  fizzbuzz_count.nail  function_call.nail  hello.nail  is_even.nail  math_module.nail  max_of_two.nail  safe_div.nail  saturating_increment.nail  stdlib_example.nail  sum_loop.nail  wrapping_add.nail
integrations/: __init__.py  function_calling.py  litellm.md  mcp.md
interpreter/: __init__.py  checker.py  runtime.py  type_resolver.py  types.py
nail_lang/: __init__.py  __init__.pyi  _effects.py  _fc_standard.py  _mcp.py  fc_cli.py  fc_ir_v1.py  fc_ir_v2.py  mcp_cli.py
nail_lens/: __init__.py  cli.py  inspector.py
playground/: README.md  app.js  index.html  server.py  style.css
(+222 files in other folders)
