[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nail-lang"
version = "0.2.0"
description = "A programming language designed to be written by AI, not humans."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.0",
]

[project.scripts]
nail = "nail_cli:main"

[project.urls]
Homepage = "https://naillang.com"
Repository = "https://github.com/watari-ai/nail"
