[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nail-lang"
version = "0.5.0"
description = "A programming language designed to be written by AI, not humans."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
dependencies = [
    "jsonschema>=4.0",
]

[project.scripts]
nail = "nail_cli:main"

[project.urls]
Homepage = "https://naillang.com"
Repository = "https://github.com/watari-ai/nail"

[tool.setuptools]
py-modules = ["nail_cli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["interpreter*"]

[tool.setuptools.package-data]
"*" = ["*.nail"]
